feat and fix some components add style animation add some model add pagination page view model astract class update UI home component update UI product details components update UI product list component change UI and logic ow-carousel-card update slideshow-component add some image

--- a/src/app/pages/home/child-components/hot-product/hot-product.component.scss
+++ b/src/app/pages/home/child-components/hot-product/hot-product.component.scss
@@ -58,6 +58,11 @@
   color: #fff;
 }
 
+.details-button:hover {
+  background-color: rgb(25, 24, 33);
+  transform: scale(1.05);
+}
+
 img {
   height: auto;
   width: 100%;
