--- a/src/app/pages/personal-information/personal-information.component.html
+++ b/src/app/pages/personal-information/personal-information.component.html
@@ -1,1 +1,58 @@
-<p>personal-information works!</p>
+<div class="product-list">
+  <div class="title-container">
+    <div class="container">
+      <div class="title-text">
+        Khuyến mãi
+      </div>
+      <div class="title-route">
+        Trang chủ.<span>Khuyến mãi</span>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container m-common">
+    <div class="sidebar-plus-content">
+      <aside class="page-sidebar">
+        <nav class="secondary-nav">
+          <ul id="menu-links" role="menubar">
+            <li class="list-group">
+              <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Laptop</strong>
+              <ul class="menu" role="menu">
+                <li class="item item-promotion">
+                  <a class="link " href="/en_us/women/new-arrivals/view-all.html" role="menuitem"
+                    data-tracking-label="view-all">
+                    Mac</a>
+                </li>
+                <li class="list-group item-promotion">
+                  <a class="link current" href="/en_us/women/new-arrivals/clothes.html" role="menuitem"
+                    data-tracking-label="clothes">
+                    HP</a>
+                  <ul class="menu" role="menu" style="display: none">
+                  </ul>
+                </li>
+                <li class="item item-promotion">
+                  <a class="link " href="/en_us/women/new-arrivals/shoes-accessories.html" role="menuitem"
+                    data-tracking-label="shoes-accessories">
+                    Dell</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/beauty.html" role="menuitem"
+                    data-tracking-label="beauty">
+                    Asus</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/underwear-nightwear.html" role="menuitem"
+                    data-tracking-label="underwear-nightwear">
+                    Lenovo</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </aside>
+      <div class="page-content">
+      </div>
+    </div>
+  </div>
+</div>
