--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,9 +1,11 @@
 .d-flex {
   display: flex;
+  justify-content: space-between;
 }
 
 .flex-width-60 {
-  flex: 0 0 60%;
+  margin: 0 50px;
+  flex: 0 0 50%;
   width: 60%;
 }
 
@@ -25,29 +27,38 @@
 }
 
 .carousel-item {
+
   .content {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     background-color: #f2f0ff;
     display: flex;
-    padding: 50px 30px;
     border-radius: 20px;
+    width: 100%;
+    height: 500px;
+    align-items: center;
+
     .description-text {
-      padding: 80px 20px;
+      z-index: 5;
+      padding: 80px 50px;
       .title {
+        font-weight: bold;
         font-size: 53px;
         line-height: 82px;
-        color: #000000;
+        color: white;
         z-index: 20;
       }
 
       .text {
+        z-index: 5;
         padding-right: 40px;
-        font-family: "Lato";
         font-style: normal;
         font-weight: 700;
-        font-size: 16px;
+        font-size: 20px;
         line-height: 28px;
         text-align: justify;
-        color: #8a8fb9;
+        color: white;
       }
     }
 
@@ -62,7 +73,7 @@
         z-index: 10;
         right: 10%;
         top: 15%;
-        background-color: rgba(236, 210, 250, 0.35);
+        background-color: rgba(90, 48, 112, 0.35);
         text-align: center;
         padding: 20px;
       }
@@ -82,6 +93,16 @@
       color: #1a0b5b;
     }
   }
+}
+
+.black-opacity {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: rgba(51, 36, 58, 0.35);
+  opacity: 0.8;
+  z-index: 2;
+  border-radius: 20px;
 }
 
 @media screen and (max-width: 768px) {
