--- a/src/app/pages/product-details/child-components/product-introduction/product-introduction.component.scss
+++ b/src/app/pages/product-details/child-components/product-introduction/product-introduction.component.scss
@@ -4,51 +4,9 @@
   box-shadow: 0px 0px 25px 10px #ebe9f3;
   border-radius: 5px;
   margin-bottom: 30px;
+  max-height: 60%;
 }
 
-.carousel-image {
-  width: 100%;
-  .image-list {
-    width: 100%;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    white-space: nowrap;
-
-    img {
-      margin-right: 10px;
-      display: inline-block;
-      width: 33%;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-color: #f9fafc;
-    }
-    .slideLeft {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      z-index: 10;
-    }
-
-    .slideRight {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      z-index: 10;
-    }
-  }
-
-  .image-selected {
-    margin-bottom: 20px;
-    img {
-      width: 100%;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-color: #f9fafc;
-    }
-  }
-}
 
 .image-list::-webkit-scrollbar {
   display: none;
@@ -74,11 +32,20 @@
     color: #0d134e;
   }
 
+  hr {
+    border-top: 1px solid #0d134e;
+    width: 80%;
+  }
+
   .rate {
     margin-bottom: 30px;
   }
 
   .product-price {
+    padding-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 24px;
     margin-bottom: 12px;
     text-transform: capitalize;
     span {
@@ -88,19 +55,32 @@
   }
 
   .description-short {
-    color: #a9acc6;
+    font-size: 16px;
+    line-height: 20px;
+    color: #14194a;
   }
 
   .add-to-cart {
     margin-bottom: 20px;
     margin-top: 20px;
     .cart-button {
-      padding: 5px;
+      font-size: 24px;
+      line-height: 30px;
+      padding: 10px 40px;
       border: 2px solid #0d134e;
       border-radius: 5px;
       color: #0d134e;
       background-color: white;
       margin-right: 20px;
+    }
+
+    .buy-now {
+      background-color: #12184d;
+      color: white;
+    }
+
+    .cart-button:hover {
+      transform: scale(1.05);
     }
 
     i {
@@ -115,4 +95,29 @@
       color: #a9acc6;
     }
   }
+}
+
+
+.child-info {
+  display: flex;
+  padding: 12px 16px;
+}
+
+.info-text {
+  margin: 0px;
+  padding: 0px;
+  border-style: none;
+  border-width: 1px;
+  border-color: unset;
+  opacity: 1;
+  color: inherit;
+  font-weight: 400;
+  text-decoration: unset;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: unset;
+  max-width: unset;
+  min-width: unset;
+  transition: color 0.3s ease 0s;
 }
