--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -13,140 +13,7 @@
 
   <div class="container m-common">
     <div class="sidebar-plus-content">
-      <aside class="page-sidebar">
-        <div class="item-filter" style="border: none;">
-          <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Giá cả</strong>
-          <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ngx-slider>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="trademark" data-bs-toggle="collapse" href="#trademarks" role="button" aria-expanded="false" aria-controls="trademarks" (click)="addStyle($event, 'trademark')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Thương hiệu</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="trademarks">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="series-laptop" type="button"  data-bs-toggle="collapse" href="#seriesLaptop" role="button" aria-expanded="false" aria-controls="seriesLaptop" (click)="addStyle($event, 'series-laptop')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Series Laptop</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="seriesLaptop">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="color" type="button"  data-bs-toggle="collapse" href="#colors" role="button" aria-expanded="false" aria-controls="colors" (click)="addStyle($event, 'color')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Màu sắc</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="colors">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="series-cpu" type="button"  data-bs-toggle="collapse" href="#seriesCPU" role="button" aria-expanded="false" aria-controls="seriesCPU" (click)="addStyle($event, 'series-cpu')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Series CPU</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="seriesCPU">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="series-gpu" type="button"  data-bs-toggle="collapse" href="#seriesGPU" role="button" aria-expanded="false" aria-controls="seriesGPU" (click)="addStyle($event, 'series-gpu')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Series GPU</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="seriesGPU">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="ram-capacity" type="button"  data-bs-toggle="collapse" href="#RAMCapacity" role="button" aria-expanded="false" aria-controls="RAMCapacity" (click)="addStyle($event, 'ram-capacity')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Dung lượng RAM</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="RAMCapacity">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="resolution" type="button"  data-bs-toggle="collapse" href="#resolutions" role="button" aria-expanded="false" aria-controls="resolutions" (click)="addStyle($event, 'resolution')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Độ phân giải</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="resolutions">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-        <div class="item-filter">
-          <a class="dropdown-button" id="screen-size" type="button"  data-bs-toggle="collapse" href="#screenSize" role="button" aria-expanded="false" aria-controls="screenSize" (click)="addStyle($event, 'screen-size')">
-            <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Kích thước màn hình</strong>
-            <ng-container *ngTemplateOutlet="dropdownIcon"></ng-container>
-          </a>
-          <div class="collapse multi-collapse" id="screenSize">
-            <ng-container *ngFor="let item of listTrademark">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  {{ item }}
-                </label>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-      </aside>
+      <app-product-list-filter [items]="this.productListFilterViewData$ | async"></app-product-list-filter>
       <div class="page-content">
         <div class="sort-list">
           <div class="title">
@@ -168,54 +35,8 @@
             Giá tăng dần
           </button>
         </div>
-        <div class="list-card">
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
 
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-
-          <div class="item-style">
-            <app-property-card>
-            </app-property-card>
-          </div>
-
-
-        </div>
+        <app-product-list-details [items]="this.productListDetailsViewData$ | async"></app-product-list-details>
       </div>
     </div>
   </div>
@@ -225,12 +46,3 @@
 <button class="btn btn-primary" (click)="addFile()">Add</button>
  -->
 
-<ng-template #dropdownIcon>
-  <div class="animation-svg">
-    <svg fill="none" viewBox="0 0 24 24"  color="textPrimary" height="1em" width="1em"
-      xmlns="http://www.w3.org/2000/svg">
-      <path d="M5 8.5L12 15.5L19 8.5" stroke="#82869E" stroke-width="1.5" stroke-linecap="round"
-        stroke-linejoin="round"></path>
-    </svg>
-  </div>
-</ng-template>
