--- a/src/app/shares/components/ow-carousel-card/ow-carousel-card.component.html
+++ b/src/app/shares/components/ow-carousel-card/ow-carousel-card.component.html
@@ -1,17 +1,17 @@
 <div class="container m-common">
   <div class="hot-top">
     <div id="carousels" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
+      <div class="carousel-indicators" style="margin-bottom: -1rem;">
         <ng-container *ngFor="let items of this.productListShow; let idx = index">
-          <button type="button" data-bs-target="#carousels" data-bs-slide-to="0" [class.active]="idx == 0" aria-current="true"></button>
+          <button type="button" class="button-bottom" data-bs-target="#carousels" data-bs-slide-to="0" [class.active]="idx == 0" aria-current="true"></button>
         </ng-container>
       </div>
       <div class="carousel-inner" *ngIf="this.productListShow">
-        <ng-container *ngFor="let items of this.productListShow; let idx = index">
-          <div class="carousel-item" [class.active]="idx == 0">
+        <ng-container *ngFor="let items of this.productListShow; let idx = index;  first as isFirst">
+          <div [ngClass]="isFirst ? 'carousel-item active' : 'carousel-item' ">
             <div class="list-card">
               <ng-container *ngFor="let it of items">
-                <div class="item-card">
+                <div class="item-style">
                   <app-property-card [product]="it">
                   </app-property-card>
                 </div>
