--- a/src/app/shares/components/property-card/property-card.component.html
+++ b/src/app/shares/components/property-card/property-card.component.html
@@ -3,18 +3,24 @@
     <!-- deploy app-->
     <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded-top" alt="...">
-        </div>
-        <div class="carousel-item">
+        <ng-container *ngIf="product?.medias?.length > 0, else noMedias;">
+          <div class="carousel-item" *ngFor="let media of product?.medias; let i = index" [class.active]="i == 0">
+            <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" class="rounded-top" alt="...">
+          </div>
+        </ng-container>
+        <!-- <div class="carousel-item">
           <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/beidou.jpg" class="rounded-top" alt="...">
         </div>
         <div class="carousel-item">
           <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/hutao.jpg" class="rounded-top" alt="...">
-        </div>
+        </div> -->
       </div>
     </div>
-
+    <ng-template #noMedias>
+      <div class="carousel-item active">
+        <img src="./../../../../assets/images/no-image-beidou.png" class="rounded-top" alt="...">
+      </div> -->
+    </ng-template>
     <!-- <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -39,8 +45,9 @@
   </div>
   <!-- <img class="card-img-top" src="./../../../../assets/images/ganyu-1.png" alt=""> -->
   <div class="card-body">
-    <a [routerLink]="['/product-list', 'dung-kun']" style="text-decoration: none; color: #FB2E86;">
-      <h5 class="card-title text-center">{{ product?.name || "Ganyu" }}</h5>
+    <h6 class="card-title trademark-text">{{ product?.metaDatas?.manufacturers[0]?.name || ""}}</h6>
+    <a [routerLink]="['/product-list', product?.id ]" style="text-decoration: none; color: #FB2E86;">
+      <h6 class="card-title text-center">{{ product | productNameShowPipe:false }}</h6>
     </a>
     <div class="card-text text-center">
       <div class="card-bar-icon">
@@ -49,10 +56,10 @@
         <div class="bar-icon" style="background: #FFEAC1;"></div>
       </div>
       <p class="text-cost">
-        {{product?.price + " VNĐ"}}
+        {{(product?.price || "0") + " VNĐ"}}
       </p>
-      <p *ngIf="product?.metaData != null" class="text-cost-km">
-        {{product?.price + " VNĐ"}}
+      <p *ngIf="product?.metaDatas != null" class="text-cost-km">
+        {{(product?.price || "0") + " VNĐ"}}
       </p>
     </div>
   </div>
