--- a/src/app/shares/components/slideshow-gallery/slideshow-gallery.component.scss
+++ b/src/app/shares/components/slideshow-gallery/slideshow-gallery.component.scss
@@ -3,22 +3,38 @@
 }
 
 img {
+  object-fit: contain;
   border-radius: 5px;
   vertical-align: middle;
 }
 
+.img-show {
+  object-fit: contain;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* Position the image container (needed to position the left and right arrows) */
 .container-1 {
+  max-width: 100%;
   position: relative;
   border-radius: 5px;
 }
 
 /* Hide the images by default */
 .mySlides {
-  display: none;
-  border: none;
+  border-radius: 5px;
   padding: 0;
   margin: 0;
+  padding-bottom: 100%;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: none;
+  border: none;
 }
 
 /* Add a pointer when hovering over the thumbnail images */
@@ -81,10 +97,10 @@ img {
 }
 
 .row-img {
+  position: relative;
   display: flex;
   flex-direction: row;
   height: 100%;
-  overflow-x: scroll;
 }
 
 /* Six columns side by side */
@@ -93,6 +109,17 @@ img {
   float: left;
 }
 
+.flex-25 {
+  flex: 0 0 25%;
+}
+
+.flex-50 {
+  flex: 0 0 50%;
+}
+
+.flex-33 {
+  flex: 0 0 33.333333%;
+}
 /* Add a transparency effect for thumnbail images */
 .demo {
   opacity: 0.6;
@@ -103,18 +130,21 @@ img {
   opacity: 1;
 }
 
-.row-img::-webkit-scrollbar-track {
+.active-style-scroll {
+  overflow-x: scroll;
+}
+.active-style-scroll::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
   border-radius: 10px;
 }
 
-.row-img::-webkit-scrollbar {
+.active-style-scroll::-webkit-scrollbar {
   height: 10px;
   background-color: #f5f5f5;
 }
 
-.row-img::-webkit-scrollbar-thumb {
+.active-style-scroll::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-image: -webkit-gradient(
     linear,
@@ -125,4 +155,5 @@ img {
     color-stop(0.86, rgb(28, 58, 148))
   );
 }
+
 
