--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,9 @@
 
 @import './assets/css/font-style.scss';
 
+@import './assets/css/animation-style.scss';
+
+
 @font-face {
   font-family: 'Josefin Sans';
   src: url(./assets/fonts/JosefinSans-VariableFont_wght.ttf);
