--- a/src/app/pages/product-list/child-components/product-list-details/product-list-details.component.html
+++ b/src/app/pages/product-list/child-components/product-list-details/product-list-details.component.html
@@ -8,7 +8,7 @@
          totalItems: COUNT
     }; ">
       <div class="item-style">
-        <app-property-card [product]="product">
+        <app-property-card [items]="{ productType: product }">
         </app-property-card>
       </div>
     </ng-container>
